Fix Header icons align

--- a/css/styles.css
+++ b/css/styles.css
@@ -188,6 +188,9 @@ button {
 }
 
 .contacts-item {
+  display: inline-flex;
+  align-items: center;
+
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
